# Arrival-Protocol

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE-DOCS  README.md  SESSION_CONTINUITY.md  pyproject.toml
docs/: @GENESIS_SEED.txt  ATOM_DICTIONARY.md  Deus 2.0 Seed.txt  FAQ.md  FAQ_RU.md  RELATED_WORK.md  RELATED_WORK_RU.md
docs/companion/: AUTOGEN_PAPER.md  MEMORY_PAPER.md  PREPRINT_MEMORY.md  autogen_paper.tex  memory_paper.tex
docs/math/: MEANING-CRDT_v1.1.md  MEMORY_CRDT_SPEC.md
docs/paper/: ARRIVAL_PROTOCOL.md
docs/reports/: AUTOGEN_REPORT_EN.md  PHASE_10_REPORT_EN.md  PHASE_11_REPORT_EN.md  PHASE_12_REPORT_EN.md  PHASE_13_REPORT_EN.md  PHASE_14_REPORT_EN.md  PHASE_15_REPORT_EN.md  PHASE_16_REPORT_EN.md  PHASE_17_REPORT_EN.md  PHASE_18_REPORT_EN.md  PHASE_19_REPORT_EN.md  PHASE_22_REPORT_EN.md  PHASE_4_REPORT_EN.md  PHASE_5_REPORT_EN.md  PHASE_6_REPORT_EN.md  PHASE_7_REPORT_EN.md  PHASE_8_REPORT_EN.md  PHASE_9_REPORT_EN.md  REPORT_CRDT.md
docs/setup/: SETUP_EN.md  SETUP_RU.md  USAGE_GUIDE_EN.md  USAGE_GUIDE_RU.md
experiments/: run_all.py  run_experiments.py
experiments/autogen_validation/: __init__.py  exp1_basic_mcq.py  exp2_adversarial.py  exp3_vs_native.py
experiments/phase14_memory_global/: extract_scars.py  init_memory_store.py  questions_gpqa.py  run_memory_experiment.py  run_phase14.py  run_phase15.py
experiments/phase15_care_alert/: init_memory_store.py  questions_hard.py  run_phase14.py
experiments/phase16_homogeneous/: compare_with_phase13.py  config_phase16.py  per_question_analytics.py  run_phase16.py
experiments/phase17_solo_cot/: run_phase17.py  (+2 more)
final_report/: .zenodo.json  ARRIVAL_PROTOCOL_PREPRINT.md  CITATION.cff
latex-report/: LICENSE  main.tex  references.bib  zenodo_metadata.json
tests/: conftest.py  test_crdt_metrics.py  test_metrics.py
(+180 files in other folders)
